// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge demo -- badge 1`] = `
.c33 {
  position: relative;
  display: inline-block;
}

.c34 {
  position: absolute;
}

.c35 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c11 {
  vertical-align: baseline;
}

.c31 {
  margin-right: 8px;
  font-size: 14px;
}

.c29 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c29 .c30 {
  color: #3555f6;
}

.c32 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c27 {
  position: relative;
  margin-bottom: -8px;
}

.c27 .c28,
.c27 .style__RadioTagWrap-sc-25j3mq-3,
.c27 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c27 .c28:last-child,
.c27 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c27 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c27 .c37+.c37 {
  margin-left: -1px;
}

.c27 .c36 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c27 .c36:first-child {
  border-radius: 2px 0 0 2px;
}

.c27 .c36:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c7 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c7 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c7 input:focus {
  border-color: #4683e6;
  background-color: #f6f6fb;
}

.c7 input:disabled,
.c7 input[disabled] {
  box-shadow: none;
}

.c7 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 input::-moz-placeholder {
  color: #abb4c3;
}

.c7 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 input::placeholder {
  color: #abb4c3;
}

.c7 .c38 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c14 {
  position: relative;
}

.c16 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c10 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  box-shadow: 0 2px 4px 0 #e4e5f2,0 1px 1px 0 rgba(162,166,191,0.32),0 1px 0 0 rgba(223,224,241,0.7);
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #dfe0f1;
  padding-right: 22px;
  border-right-width: 0;
}

.c8 .c15 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c8 .c15::-webkit-input-placeholder {
  color: #abb4c3;
}

.c8 .c15::-moz-placeholder {
  color: #abb4c3;
}

.c8 .c15:-ms-input-placeholder {
  color: #abb4c3;
}

.c8 .c15::placeholder {
  color: #abb4c3;
}

.c8:hover {
  border-color: #c3cad9;
}

.c8 .c13 {
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  background: #fafafc;
}

.c8 .c13:hover {
  background: #f6f6fb;
}

.c8 .c15 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c8 .c9,
.c8 .c12 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c8 .c9:hover,
.c8 .c12:hover {
  color: #3555f6;
}

.c8 .c9 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c8 .c12 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #e8e9f5;
}

.c19 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c21 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c24 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c26 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c17 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c17:hover {
  border-color: #4683e6;
}

.c17 .c23 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c17 .c25 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c17 .c18 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c17 .c20,
.c17 .c22 {
  line-height: 16px;
}

.c17 .c20 {
  padding-right: 20px;
}

.c17 .c22 {
  padding-left: 20px;
}

.c17 .c20 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        value
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c7"
        >
          <input
            value="1"
          />
        </span>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        maxValue
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c8"
        >
          <div>
            <span
              class="c9 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c10"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c11"
                type="caret-up"
              />
            </span>
            <span
              class="c12 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c10"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c11"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="c13 uc-fe-numberinput-input-wrap c14"
          >
            <input
              autocomplete="off"
              class="c15 uc-fe-numberinput-input c16"
              min="-9007199254740991"
              step="1"
              value="99"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        dot
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c17"
        >
          <div
            class="c18 c19"
          >
            <span
              class="c20 c21"
            >
              ON
            </span>
            <span
              class="c22 c21"
            >
              OFF
            </span>
            <span
              class="c23 c24"
            >
              <span
                class="c25 c26"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        hideWhenZero
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c17"
        >
          <div
            class="c18 c19"
          >
            <span
              class="c20 c21"
            >
              ON
            </span>
            <span
              class="c22 c21"
            >
              OFF
            </span>
            <span
              class="c23 c24"
            >
              <span
                class="c25 c26"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        noneContent
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c17"
        >
          <div
            class="c18 c19"
          >
            <span
              class="c20 c21"
            >
              ON
            </span>
            <span
              class="c22 c21"
            >
              OFF
            </span>
            <span
              class="c23 c24"
            >
              <span
                class="c25 c26"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        placement
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c27"
        >
          <div
            checked=""
            class="c28 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c29"
          >
            <i
              class="c30 c31 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            topRight
          </div>
          <div
            class="c28 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c32"
          >
            <i
              class="c30 c31 uc-fe-icon icon__circle c11"
              type="circle"
            />
            topLeft
          </div>
          <div
            class="c28 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c32"
          >
            <i
              class="c30 c31 uc-fe-icon icon__circle c11"
              type="circle"
            />
            bottomRight
          </div>
          <div
            class="c28 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c32"
          >
            <i
              class="c30 c31 uc-fe-icon icon__circle c11"
              type="circle"
            />
            bottomLeft
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        badgeStyle.color
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        badgeStyle.background
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-badge c33"
      style="margin:10px;"
    >
      <div
        style="width:50px;height:50px;background:#ddd;"
      />
      <div
        class="uc-fe-badge-badge-wrap c34"
      >
        <span
          class="uc-fe-badge-badge c35"
        >
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customStyle 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c3 {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
        style="background:white;color:black;border:1px solid #ddd;"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge-dot c3 uc-fe-badge-badge c2"
        style="background:blue;"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        string
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        <span
          style="font-weight:bolder;"
        >
          node
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- dot 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c3 {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge-dot c3 uc-fe-badge-badge c2"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- hideWhenZero 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        0
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
  </div>
</div>
`;

exports[`Badge demo -- maxValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        10
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        9+
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- noneContent 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <span
      class="uc-fe-badge-badge c2"
    >
      99+
    </span>
  </div>
</div>
`;

exports[`Badge demo -- placement 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
</div>
`;
